Add some correct (and some not!) links to the PDFs

--- a/public/data/explanations/1.md
+++ b/public/data/explanations/1.md
@@ -1,15 +1,11 @@
-# 🇨🇭 Understanding Swiss Neutrality
+# 🕊️ Swiss Neutrality
 
-### The Core Definition
-The correct answer is **(c)**: Switzerland does not involve itself in the armed conflicts of other states. This is the essence of "armed neutrality." It is not just a foreign policy choice but a legal obligation under international law (specifically the Hague Conventions of 1907).
+**From the official brochure:** "Die Schweiz mischt sich nicht in Kriege ein."
 
-### Historical Origins
-While the Swiss Confederacy avoided many foreign entanglements after the Battle of Marignano in 1515, its permanent neutrality was formally recognized by the Great Powers of Europe at the **Congress of Vienna in 1815**. The powers agreed that a neutral Switzerland located at the heart of Europe was in the interest of the entire continent's stability.
+Switzerland has been an independent and neutral country since the **Congress of Vienna in 1815**.
+Being neutral means Switzerland:
+- Does not take part in armed conflicts between other countries.
+- Must be able to defend itself (which is why it has an army).
+- Is not involved in military alliances like NATO.
 
-### Rights and Duties
-Being neutral grants Switzerland the right to territorial inviolability (no foreign troops can cross it). However, it also imposes strict duties:
-* Switzerland cannot supply mercenaries or weapons to warring nations.
-* It cannot join military alliances like **NATO** (North Atlantic Treaty Organization).
-
-### Modern Context
-Neutrality does not mean "opinion-less." Switzerland actively promotes peace, human rights, and humanitarian aid. This "active neutrality" allows it to serve as a mediator (Protecting Power mandate) and host international organizations like the UN and Red Cross in Geneva. Even joining the UN in 2002 was carefully debated to ensure it didn't conflict with neutrality.
+Because it is neutral, Switzerland hosts the headquarters of many international organizations, such as the UN (United Nations) and the Red Cross (ICRC), which was founded by the Swiss Henry Dunant.
