--- a/public/data/explanations/3.md
+++ b/public/data/explanations/3.md
@@ -1,13 +1,10 @@
-# 🏛️ Confoederatio Helvetica (CH)
+# 🇨🇭 Confoederatio Helvetica
 
-### Why Latin?
-The correct answer is **(b)**. "Confoederatio Helvetica" is the Latin name for the Swiss Confederation. Switzerland uses Latin because it has **four official national languages** (German, French, Italian, Romansh). Choosing one language for the country's official name or abbreviation would have been seen as favoring that language group.
+**From the official brochure:** "Confoederatio Helvetica (CH). Dieser Name steht zum Beispiel auf der 5-Franken-Münze."
 
-### Historical Roots
-The name "Helvetica" comes from the **Helvetii**, a Celtic tribe that inhabited the Swiss plateau before the Roman conquest in 58 BC. The Romans called the region "Helvetia." When the modern federal state was formed in 1848, the founders needed a neutral, unifying name.
+Because Switzerland has four national languages (German, French, Italian, and Romansh), it uses a neutral Latin name to avoid favoring any single language on official documents, coins, and stamps.
 
-### Everyday Use
-You see this heritage everywhere today:
-* **CH:** The country code on car stickers and internet domains (.ch).
-* **Coins:** Swiss francs bear the inscription "Confoederatio Helvetica" or "Helvetia" to avoid printing the text in four languages.
-* **Helvetia:** The female national personification (Mother Helvetia) appears on stamps and coins, symbolizing the unity of the confederation.
+- **Confoederatio** means "Confederation" or "Alliance".
+- **Helvetica** refers to the Helvetians, an ancient Celtic tribe that lived in the area of modern-day Switzerland during the Roman era.
+
+This is also why the country code for Switzerland is **CH** (e.g., in web addresses `.ch` or on car stickers).
