--- a/public/data/explanations/5.md
+++ b/public/data/explanations/5.md
@@ -1,10 +1,7 @@
-# 🤝 The Principle of Collegiality
+# 🤝 The Principle of Collegiality (Kollegialitätsprinzip)
 
-### One Voice
-The correct answer is **(c)**: The Federal Council makes decisions as a collective, and members must represent these decisions to the outside world, even if they personally disagreed during the internal debate. This is known as the **Kollegialitätsprinzip**.
+**From the official brochure:** "In der Schweiz werden wichtige Entscheidungen gemeinsam gefällt. Das heisst: Alle Mitglieder des Bundesrats sind gleichberechtigt... Diese gemeinsame politische Haltung nach aussen nennt man Kollegialitätsprinzip."
 
-### Why is it important?
-This principle is the cornerstone of Swiss stability. Switzerland does not have a "Prime Minister" or "President" with executive power over the others; all seven members are equal. If members publicly criticized their own government's decisions, the government would appear weak and divided.
+The "Kollegialitätsprinzip" means that the 7 members of the Federal Council (Bundesrat) make decisions as a group. Once a decision is made by the majority, **all members must publicly support and defend that decision**, even if they personally voted against it or their political party disagrees with it.
 
-### How it works
-Behind closed doors, the seven Councilors argue fiercely and debate issues. Decisions are eventually made by voting. Once the vote is cast, the "veil of secrecy" falls. Every member—from the left-wing Social Democrat to the right-wing SVP member—must defend the compromise. This forces the government to find solutions that are broadly acceptable rather than enforcing a strict party line.
+This system ensures stability and a unified voice from the government to the public.
