--- a/public/data/explanations/6.md
+++ b/public/data/explanations/6.md
@@ -1,16 +1,10 @@
-# 🗳️ The Power of the Referendum
+# 🗳️ The Referendum
 
-### The Core Definition
-The correct answer is **(d)**: Citizens can stop a new law using a **referendum**. This is a powerful instrument of direct democracy that acts as a "brake" on the parliament.
+**From the official brochure:** "Wenn das Bundesparlament ein neues Gesetz bestimmen möchte, können die Bürgerinnen und Bürger mit einem Referendum eine Abstimmung verlangen."
 
-### How it Works
-If the Parliament passes a new law or changes an existing one, citizens who disagree have **100 days** to collect **50,000 signatures**.
-*   If they succeed, a national vote (referendum) is held.
-*   For the law to be rejected, a simple majority of the people (Volksmehr) is sufficient; the "Ständemehr" (majority of cantons) is not needed for optional referendums.
+A **Referendum** gives citizens the power to stop or vote on a law that has already been passed by the Parliament.
 
-### Optional vs. Mandatory
-*   **Optional Referendum:** For normal laws. Requires signatures.
-*   **Mandatory Referendum:** Required automatically if the Parliament wants to change the **Constitution** or join a supranational community.
+- **How it works:** If citizens disagree with a new law, they have 100 days to collect **50,000 valid signatures**.
+- **What happens next:** If they succeed, a nationwide vote is held. The law only comes into effect if the majority of the voting population says "Yes".
 
-### Modern Relevance
-Recent examples include referendums on the CO2 Act or the Covid-19 Act. It forces politicians to compromise *before* passing laws, knowing the people can have the final say.
+This makes the referendum a powerful tool of direct democracy, acting as a "veto" against the government and parliament.
