--- a/public/data/explanations/4.md
+++ b/public/data/explanations/4.md
@@ -1,16 +1,15 @@
-# 🏢 The Departments of the Federal Administration
+# 🏢 Federal Departments (Die Departemente)
 
-### Structure of Government
-The correct answer is **(d)**: The Federal Department of Justice and Police (EJPD). The Swiss Federal Administration is divided into exactly **seven departments**, reflecting the seven members of the Federal Council. Each Councilor heads one department.
+**From the official brochure:** "Jedes Mitglied des Bundesrats ist verantwortlich für einen Bereich. Für jeden Bereich gibt es ein Departement."
 
-### The Seven Departments
-Unlike other countries with "Ministries," Switzerland has "Departments":
-1. **EDA:** Foreign Affairs
-2. **EDI:** Home Affairs (Culture, Health, Social Security)
-3. **EJPD:** Justice and Police
-4. **VBS:** Defense, Civil Protection, and Sport
-5. **EFD:** Finance
-6. **WBF:** Economic Affairs, Education, and Research
-7. **UVEK:** Environment, Transport, Energy, and Communications
+The Swiss federal government (Bundesrat) has 7 members. Each member is the head of one of the 7 Federal Departments (Ministries). The departments are:
 
-This system ensures that every major area of governance has direct representation in the supreme executive body. The "Justice and Police" department, for example, handles issues like migration, citizenship, and federal police coordination.
+1. **EDA**: Foreign Affairs
+2. **EDI**: Home Affairs (Interior)
+3. **EJPD**: Justice and Police
+4. **VBS**: Defence, Civil Protection and Sport
+5. **EFD**: Finance
+6. **WBF**: Economic Affairs, Education and Research
+7. **UVEK**: Environment, Transport, Energy and Communications
+
+The "Justiz- und Polizeidepartement" (Justice and Police) is the correct answer. The other options listed are not real federal departments.
